--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -1,116 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
-
-<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
-    <tabs>
-        <Tab text="Transfers">
-            <content>
-                <AnchorPane>
-                    <children>
-                        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                              AnchorPane.topAnchor="0.0">
-                            <children>
-                                <GridPane VBox.vgrow="ALWAYS">
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0"
-                                                           prefWidth="127.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="358.0" minWidth="10.0"
-                                                           prefWidth="358.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
-                                    <children>
-                                        <Label text="Friendly Name:"/>
-                                        <Label text="IP-Address:" GridPane.rowIndex="1"/>
-                                        <Label text="Fingerprint:" GridPane.rowIndex="2"/>
-                                        <Text fx:id="IpAddress" strokeType="OUTSIDE" strokeWidth="0.0"
-                                              text="172.96.12.88" wrappingWidth="160.7392578125"
-                                              GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                        <Text fx:id="FingerPrint" strokeType="OUTSIDE" strokeWidth="0.0" text=""
-                                              wrappingWidth="457.7392578125" GridPane.columnIndex="1"
-                                              GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
-                                        <Text fx:id="FriendlyName" strokeType="OUTSIDE" strokeWidth="0.0"
-                                              text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
-                                    </children>
-                                    <padding>
-                                        <Insets bottom="20.0"/>
-                                    </padding>
-                                </GridPane>
-                                <HBox VBox.vgrow="ALWAYS">
-                                    <children>
-                                        <VBox HBox.hgrow="ALWAYS">
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Peers"
-                                                      VBox.vgrow="ALWAYS"/>
-                                                <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick"
-                                                          VBox.vgrow="ALWAYS"/>
-                                            </children>
-                                            <padding>
-                                                <Insets right="10.0"/>
-                                            </padding>
-                                        </VBox>
-                                        <VBox HBox.hgrow="ALWAYS">
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Downloads"
-                                                      VBox.vgrow="ALWAYS"/>
-                                                <ListView onMouseClicked="#onListItemDoubleClick" VBox.vgrow="ALWAYS"/>
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                </HBox>
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                            </padding>
-                        </VBox>
-                    </children>
+    <Tab text="Transfers">
+        <AnchorPane>
+            <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0">
+                <padding>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </padding>
+                <GridPane VBox.vgrow="ALWAYS">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0"
+                                           prefWidth="127.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="358.0" minWidth="10.0"
+                                           prefWidth="358.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <padding>
+                        <Insets bottom="20.0"/>
+                    </padding>
+                    <Label text="Friendly Name:"/>
+                    <Label text="IP-Address:" GridPane.rowIndex="1"/>
+                    <Label text="Fingerprint:" GridPane.rowIndex="2"/>
+                    <Text fx:id="IpAddress" strokeType="OUTSIDE" strokeWidth="0.0"
+                          text="172.96.12.88" wrappingWidth="160.7392578125"
+                          GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                    <Text fx:id="FingerPrint" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
+                          wrappingWidth="457.7392578125" GridPane.columnIndex="1"
+                          GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
+                    <Text fx:id="FriendlyName" strokeType="OUTSIDE" strokeWidth="0.0"
+                          text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
+                </GridPane>
+                <HBox VBox.vgrow="ALWAYS">
+                    <VBox HBox.hgrow="ALWAYS">
+                        <padding>
+                            <Insets right="10.0"/>
+                        </padding>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Peers"
+                              VBox.vgrow="ALWAYS"/>
+                        <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick"
+                                  VBox.vgrow="ALWAYS"/>
+                    </VBox>
+                    <VBox HBox.hgrow="ALWAYS">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Downloads"
+                              VBox.vgrow="ALWAYS"/>
+                        <ListView onMouseClicked="#onListItemDoubleClick" VBox.vgrow="ALWAYS"/>
+                    </VBox>
+                </HBox>
+            </VBox>
+        </AnchorPane>
+    </Tab>
+    <Tab text="Channels">
+        <fx:include source="ChannelView.fxml"/>
+    </Tab>
+    <Tab text="Settings">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <SplitPane dividerPositions="0.29797979797979796" layoutX="13.0" layoutY="13.0"
+                       prefHeight="563.0" prefWidth="1006.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="253.0">
+                    <Button id="button_prefernces" layoutX="31.0" layoutY="46.0"
+                            mnemonicParsing="false" onAction="#handlePreferencesButtonAction"
+                            prefHeight="43.0" prefWidth="217.0" text="Preferences"/>
+                    <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0"
+                            prefWidth="217.0" text="Button"/>
                 </AnchorPane>
-            </content>
-        </Tab>
-        <Tab text="Channels">
-            <fx:include fx:id="channelPane" source="ChannelView.fxml"/>
-        </Tab>
-        <Tab text="Settings">
-            <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                    <children>
-                        <SplitPane dividerPositions="0.29797979797979796" layoutX="13.0" layoutY="13.0"
-                                   prefHeight="563.0" prefWidth="1006.0">
-                            <items>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="253.0">
-                                    <children>
-                                        <Button id="button_prefernces" layoutX="31.0" layoutY="46.0"
-                                                mnemonicParsing="false" onAction="#handlePreferencesButtonAction"
-                                                prefHeight="43.0" prefWidth="217.0" text="Preferences"/>
-                                        <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0"
-                                                prefWidth="217.0" text="Button"/>
-                                    </children>
-                                </AnchorPane>
-                                <AnchorPane fx:id="preferencesRootPane" minHeight="0.0" minWidth="0.0"
-                                            prefHeight="561.0" prefWidth="415.0"/>
-                            </items>
-                        </SplitPane>
-                    </children>
-                </AnchorPane>
-            </content>
-        </Tab>
-    </tabs>
+                <AnchorPane fx:id="preferencesRootPane" minHeight="0.0" minWidth="0.0"
+                            prefHeight="561.0" prefWidth="415.0"/>
+            </SplitPane>
+        </AnchorPane>
+    </Tab>
 </TabPane>
