--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+<TabPane xmlns:fx="http://javafx.com/fxml/1" onDragExited="#onWindowDragExit" onDragOver="#onWindowDragEnter"
+         tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8"
          fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
     <Tab text="Transfers">
         <AnchorPane>
@@ -15,10 +16,8 @@
                 </padding>
                 <GridPane VBox.vgrow="ALWAYS">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0"
-                                           prefWidth="127.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="358.0" minWidth="10.0"
-                                           prefWidth="358.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="127.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="358.0" minWidth="10.0" prefWidth="358.0"/>
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
@@ -31,31 +30,33 @@
                     <Label text="Friendly Name:"/>
                     <Label text="IP-Address:" GridPane.rowIndex="1"/>
                     <Label text="Fingerprint:" GridPane.rowIndex="2"/>
-                    <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0"
-                          text="172.96.12.88" wrappingWidth="160.7392578125"
-                          GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                    <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88"
+                          wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                     <Text fx:id="fingerPrintText" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
-                          wrappingWidth="457.7392578125" GridPane.columnIndex="1"
-                          GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
-                    <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0"
-                          text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
+                          wrappingWidth="457.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="2"
+                          GridPane.vgrow="ALWAYS"/>
+                    <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst"
+                          wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
                 </GridPane>
                 <HBox VBox.vgrow="ALWAYS">
-                    <VBox HBox.hgrow="ALWAYS">
+                    <VBox id="testRefresh" HBox.hgrow="ALWAYS">
                         <padding>
                             <Insets right="10.0"/>
                         </padding>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Peers"
-                              VBox.vgrow="ALWAYS"/>
-                        <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick"
-                                  VBox.vgrow="ALWAYS"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Peers" VBox.vgrow="ALWAYS"/>
+                        <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick" VBox.vgrow="ALWAYS"/>
                     </VBox>
                     <VBox HBox.hgrow="ALWAYS">
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Downloads"
-                              VBox.vgrow="ALWAYS"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Downloads" VBox.vgrow="ALWAYS"/>
                         <ListView onMouseClicked="#onListItemDoubleClick" VBox.vgrow="ALWAYS"/>
                     </VBox>
                 </HBox>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#refreshList"
+                        text="Refresh">
+                    <VBox.margin>
+                        <Insets top="10.0"/>
+                    </VBox.margin>
+                </Button>
             </VBox>
         </AnchorPane>
     </Tab>
@@ -64,17 +65,17 @@
     </Tab>
     <Tab text="Settings">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            <SplitPane dividerPositions="0.29797979797979796" layoutX="13.0" layoutY="13.0"
-                       prefHeight="563.0" prefWidth="1006.0">
+            <SplitPane dividerPositions="0.29797979797979796" layoutX="13.0" layoutY="13.0" prefHeight="563.0"
+                       prefWidth="1006.0">
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="253.0">
-                    <Button id="button_prefernces" layoutX="31.0" layoutY="46.0"
-                            mnemonicParsing="false" onAction="#handlePreferencesButtonAction"
-                            prefHeight="43.0" prefWidth="217.0" text="Preferences"/>
-                    <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0"
-                            prefWidth="217.0" text="Button"/>
+                    <Button id="button_prefernces" layoutX="31.0" layoutY="46.0" mnemonicParsing="false"
+                            onAction="#handlePreferencesButtonAction" prefHeight="43.0" prefWidth="217.0"
+                            text="Preferences"/>
+                    <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="217.0"
+                            text="Button"/>
                 </AnchorPane>
-                <AnchorPane fx:id="preferencesRootPane" minHeight="0.0" minWidth="0.0"
-                            prefHeight="561.0" prefWidth="415.0"/>
+                <AnchorPane fx:id="preferencesRootPane" minHeight="0.0" minWidth="0.0" prefHeight="561.0"
+                            prefWidth="415.0"/>
             </SplitPane>
         </AnchorPane>
     </Tab>
