--- a/src/main/resources/fxml/ListCell.fxml
+++ b/src/main/resources/fxml/ListCell.fxml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gridPane" maxHeight="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" xmlns="http://javafx.com/javafx/8">
-    <columnConstraints>
-        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0"/>
-        <ColumnConstraints hgrow="ALWAYS" percentWidth="35.0"/>
-        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="10.0"/>
-        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="35.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    </rowConstraints>
-    <Label fx:id="ip" text="IP:" GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <padding>
-            <Insets left="10.0" right="10.0"/>
-        </padding>
-    </Label>
-    <Label fx:id="fn" prefHeight="17.0" prefWidth="72.0" text="FN:" GridPane.columnIndex="3" GridPane.rowIndex="1">
-        <padding>
-            <Insets left="10.0" right="10.0"/>
-        </padding>
-    </Label>
-    <Label fx:id="finger" prefHeight="17.0" prefWidth="125.0" text="Fingerprint:" GridPane.columnIndex="1"
-           GridPane.rowIndex="2">
-        <padding>
-            <Insets left="10.0" right="10.0"/>
-        </padding>
-    </Label>
-    <Label fx:id="dn" prefHeight="17.0" prefWidth="91.0" text="DN:" GridPane.columnIndex="3" GridPane.rowIndex="2">
-        <padding>
-            <Insets left="10.0" right="10.0"/>
-        </padding>
-    </Label>
-    <Label text="IP:" GridPane.rowIndex="1"/>
-    <Label text="Fingerprint:" GridPane.rowIndex="2"/>
-    <Label text="FN:" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-    <Label text="DN:" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" minHeight="-Infinity"
+  minWidth="-Infinity"
+  xmlns="http://javafx.com/javafx/8" fx:id="gridPane">
+  <Label GridPane.columnIndex="1" GridPane.rowIndex="1" text="IP:" fx:id="ip">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label GridPane.columnIndex="3" GridPane.rowIndex="1" prefHeight="17.0" prefWidth="72.0"
+    text="FN:"
+    fx:id="fn">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label GridPane.columnIndex="1" GridPane.rowIndex="2" prefHeight="17.0" prefWidth="125.0"
+    text="Fingerprint:"
+    fx:id="finger">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label GridPane.columnIndex="3" GridPane.rowIndex="2" prefHeight="17.0" prefWidth="91.0"
+    text="DN:"
+    fx:id="dn">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label GridPane.rowIndex="1" text="IP:"/>
+  <Label GridPane.rowIndex="2" text="Fingerprint:"/>
+  <Label GridPane.columnIndex="2" GridPane.rowIndex="1" text="FN:"/>
+  <Label GridPane.columnIndex="2" GridPane.rowIndex="2" text="DN:"/>
+  <columnConstraints>
+    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0"/>
+    <ColumnConstraints hgrow="ALWAYS" percentWidth="35.0"/>
+    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="10.0"/>
+    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="35.0"/>
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints/>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+  </rowConstraints>
 </GridPane>
