--- a/src/main/resources/fxml/StartupView.fxml
+++ b/src/main/resources/fxml/StartupView.fxml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="ch.hsr.epj.localshare.demo.gui.application.StartupViewController">
-    <VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-          AnchorPane.topAnchor="0.0">
-        <Label prefHeight="70.0" prefWidth="555.0" text="Hello and Welcome to LocalShare">
-            <font>
-                <Font size="36.0"/>
-            </font>
-        </Label>
-        <GridPane alignment="CENTER" prefHeight="111.0" prefWidth="580.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0"/>
-                <ColumnConstraints hgrow="SOMETIMES"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <VBox.margin>
-                <Insets left="10.0" right="10.0" top="30.0"/>
-            </VBox.margin>
-            <padding>
-                <Insets left="50.0" right="50.0"/>
-            </padding>
-            <Label prefHeight="11.0" prefWidth="276.0" text="Please enter a friendlyName:">
-                <padding>
-                    <Insets bottom="5.0" right="5.0" top="5.0"/>
-                </padding>
-            </Label>
-            <TextField fx:id="friendlyNameText" text="unknown" GridPane.columnIndex="1">
-                <GridPane.margin>
-                    <Insets left="20.0" right="10.0"/>
-                </GridPane.margin>
-            </TextField>
-            <Label text="Default Config Path:" GridPane.rowIndex="1">
-                <GridPane.margin>
-                    <Insets bottom="10.0" top="10.0"/>
-                </GridPane.margin>
-            </Label>
-            <Label text="Set Default Download Folder:" GridPane.rowIndex="2">
-                <padding>
-                    <Insets bottom="5.0" top="5.0"/>
-                </padding>
-            </Label>
-            <Label fx:id="defaultConfigLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <GridPane.margin>
-                    <Insets left="30.0"/>
-                </GridPane.margin>
-            </Label>
-            <Label fx:id="defaultDownloadLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                <GridPane.margin>
-                    <Insets left="30.0"/>
-                </GridPane.margin>
-            </Label>
-            <Button mnemonicParsing="false" onAction="#handleChangeDownloadButtonClicked"
-                    text="Change Directory" GridPane.columnIndex="1" GridPane.halignment="RIGHT"
-                    GridPane.rowIndex="2">
-                <GridPane.margin>
-                    <Insets left="10.0" right="10.0"/>
-                </GridPane.margin>
-            </Button>
-        </GridPane>
-        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
-                onAction="#handleFinishButtonClick" text="Finish and start Application">
-            <VBox.margin>
-                <Insets top="50.0"/>
-            </VBox.margin>
-        </Button>
-    </VBox>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+  xmlns="http://javafx.com/javafx/8"
+  fx:controller="ch.hsr.epj.localshare.demo.gui.application.StartupViewController">
+  <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+    AnchorPane.topAnchor="0.0"
+    alignment="CENTER">
+    <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+      onAction="#handleFinishButtonClick" text="Finish and start Application">
+      <VBox.margin>
+        <Insets top="50.0"/>
+      </VBox.margin>
+    </Button>
+    <GridPane alignment="CENTER" prefHeight="111.0" prefWidth="580.0">
+      <Button GridPane.columnIndex="1" GridPane.halignment="RIGHT"
+        GridPane.rowIndex="2" mnemonicParsing="false" onAction="#handleChangeDownloadButtonClicked"
+        text="Change Directory">
+        <GridPane.margin>
+          <Insets left="10.0" right="10.0"/>
+        </GridPane.margin>
+      </Button>
+      <Label prefHeight="11.0" prefWidth="276.0" text="Please enter a friendlyName:">
+        <padding>
+          <Insets bottom="5.0" right="5.0" top="5.0"/>
+        </padding>
+      </Label>
+      <Label GridPane.rowIndex="1" text="Default Config Path:">
+        <GridPane.margin>
+          <Insets bottom="10.0" top="10.0"/>
+        </GridPane.margin>
+      </Label>
+      <Label GridPane.rowIndex="2" text="Set Default Download Folder:">
+        <padding>
+          <Insets bottom="5.0" top="5.0"/>
+        </padding>
+      </Label>
+      <Label GridPane.columnIndex="1" GridPane.rowIndex="1" text="Label" fx:id="defaultConfigLabel">
+        <GridPane.margin>
+          <Insets left="30.0"/>
+        </GridPane.margin>
+      </Label>
+      <Label GridPane.columnIndex="1" GridPane.rowIndex="2" text="Label"
+        fx:id="defaultDownloadLabel">
+        <GridPane.margin>
+          <Insets left="30.0"/>
+        </GridPane.margin>
+      </Label>
+      <TextField GridPane.columnIndex="1" text="unknown" fx:id="friendlyNameText">
+        <GridPane.margin>
+          <Insets left="20.0" right="10.0"/>
+        </GridPane.margin>
+      </TextField>
+      <VBox.margin>
+        <Insets left="10.0" right="10.0" top="30.0"/>
+      </VBox.margin>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0"/>
+        <ColumnConstraints hgrow="SOMETIMES"/>
+      </columnConstraints>
+      <padding>
+        <Insets left="50.0" right="50.0"/>
+      </padding>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+      </rowConstraints>
+    </GridPane>
+    <Label prefHeight="70.0" prefWidth="555.0" text="Hello and Welcome to LocalShare">
+      <font>
+        <Font size="36.0"/>
+      </font>
+    </Label>
+  </VBox>
 </AnchorPane>
