--- a/src/main/resources/fxml/PreferencesView.fxml
+++ b/src/main/resources/fxml/PreferencesView.fxml
@@ -2,29 +2,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
-            fx:controller="ch.hsr.epj.localshare.demo.gui.application.PreferencesViewController">
+  fx:controller="ch.hsr.epj.localshare.demo.gui.application.PreferencesViewController">
+  <children>
     <GridPane layoutX="23.0" layoutY="27.0" prefHeight="350.0" prefWidth="679.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="356.0" minWidth="10.0" prefWidth="167.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="459.0" minWidth="10.0" prefWidth="160.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="349.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Label prefHeight="31.0" prefWidth="219.0" text="Configuration Path:"/>
-        <Text fx:id="configPath" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="292.13671875"
-              GridPane.rowIndex="1"/>
-        <Label prefHeight="31.0" prefWidth="219.0" text="Current Download Path:" GridPane.rowIndex="2"/>
-        <Text fx:id="downloadPath" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="292.13671875"
-              GridPane.rowIndex="3"/>
-        <Button mnemonicParsing="false" onAction="#handleChangeDownloadButtonAction" text="Change Path"
-                GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="356.0" minWidth="10.0" prefWidth="167.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="459.0" minWidth="10.0" prefWidth="160.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="349.0"/>
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+      </rowConstraints>
+      <Label prefHeight="31.0" prefWidth="219.0" text="Configuration Path:"/>
+      <Text GridPane.rowIndex="1" strokeType="OUTSIDE" strokeWidth="0.0" text=""
+        wrappingWidth="292.13671875"
+        fx:id="configPath"/>
+      <Label GridPane.rowIndex="2" prefHeight="31.0" prefWidth="219.0"
+        text="Current Download Path:"/>
+      <Text GridPane.rowIndex="3" strokeType="OUTSIDE" strokeWidth="0.0" text=""
+        wrappingWidth="292.13671875"
+        fx:id="downloadPath"/>
+      <Button GridPane.columnIndex="2" GridPane.rowIndex="3" mnemonicParsing="false"
+        onAction="#handleChangeDownloadButtonAction" text="Change Path"/>
     </GridPane>
+  </children>
 </AnchorPane>
