--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -15,13 +15,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <TabPane xmlns:fx="http://javafx.com/fxml/1" onDragExited="#onWindowDragExit"
-  onDragOver="#onWindowDragEnter" tabClosingPolicy="UNAVAILABLE"
-  xmlns="http://javafx.com/javafx/8"
+  onDragOver="#onWindowDragEnter" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8"
   fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
   <Tab text="Transfers">
     <AnchorPane>
-      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+        AnchorPane.topAnchor="0.0">
         <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
           onAction="#refreshList" text="Refresh">
           <VBox.margin>
@@ -38,8 +37,8 @@
           <Text GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"
             GridPane.vgrow="ALWAYS" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
             wrappingWidth="581.7392578125" fx:id="fingerPrintText"/>
-          <Text GridPane.columnIndex="1" strokeType="OUTSIDE" strokeWidth="0.0"
-            text="hansWurst" wrappingWidth="116.7392578125" fx:id="friendlyNameText"/>
+          <Text GridPane.columnIndex="1" strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst"
+            wrappingWidth="116.7392578125" fx:id="friendlyNameText"/>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0"
               prefWidth="127.0"/>
@@ -49,20 +48,15 @@
             <Insets bottom="20.0"/>
           </padding>
           <rowConstraints>
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-              vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-              vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-              vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
           </rowConstraints>
         </GridPane>
         <HBox VBox.vgrow="ALWAYS">
           <VBox HBox.hgrow="ALWAYS" id="testRefresh">
-            <ListView VBox.vgrow="ALWAYS" onMouseClicked="#onListItemDoubleClick"
-              fx:id="listView"/>
-            <Text VBox.vgrow="ALWAYS" strokeType="OUTSIDE" strokeWidth="0.0"
-              text="Available Peers">
+            <ListView VBox.vgrow="ALWAYS" onMouseClicked="#onListItemDoubleClick" fx:id="listView"/>
+            <Text VBox.vgrow="ALWAYS" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Peers">
               <VBox.margin>
                 <Insets bottom="10.0"/>
               </VBox.margin>
@@ -95,11 +89,11 @@
       <SplitPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
         AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
         dividerPositions="0.39266304347826086" layoutX="13.0" layoutY="13.0">
-        <AnchorPane maxWidth="-Infinity" minHeight="0.0" minWidth="-Infinity"
-          prefHeight="589.0" prefWidth="280.0">
-          <Button id="button_prefernces" layoutX="31.0" layoutY="46.0"
-            mnemonicParsing="false" onAction="#handlePreferencesButtonAction"
-            prefHeight="43.0" prefWidth="217.0" text="Preferences"/>
+        <AnchorPane maxWidth="-Infinity" minHeight="0.0" minWidth="-Infinity" prefHeight="589.0"
+          prefWidth="280.0">
+          <Button id="button_prefernces" layoutX="31.0" layoutY="46.0" mnemonicParsing="false"
+            onAction="#handlePreferencesButtonAction" prefHeight="43.0" prefWidth="217.0"
+            text="Preferences"/>
           <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0"
             prefWidth="217.0" text="Button"/>
         </AnchorPane>
